# Numerical-methods

./: CMakeLists.txt  README.md  input.txt  main.cpp  main.h  matrix.cpp  matrix.h
inputs/: input.txt  input2.txt
src/: main.cpp  main.h  matrix.cpp  matrix.h
tests/: decomposition.cpp  test.cpp
